--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-    "name": "gzip-server",
+    "name": "gzip-server-prebuilt",
     "bin": {
-        "gzip-server": "gzip-server.js"
+        "gzip-server": "gzip-server-prebuilt.js"
     },
+    "files": [
+        "gzip-server-prebuilt.js"
+    ],
     "version": "1.0.0",
-    "description": "Simple static asset server with gzip compression, so you can figure out what slows down production page load time",
-    "repository": "https://github.com/qpwo/gzip-server",
+    "description": "PREBUILT: Simple static asset server with gzip compression, so you can figure out what slows down production page load time",
+    "repository": "https://github.com/qpwo/gzip-server/tree/prebuilt",
     "author": "Luke Harold Miles",
     "license": "MIT",
-    "dependencies": {
-        "compression": ">=1",
-        "express": ">=3"
+    "scripts": {
+        "build": "esbuild gzip-server.js --tree-shaking=true --bundle --target=node14 --format=cjs --platform=node --minify --outfile=gzip-server-prebuilt.js"
     },
     "devDependencies": {
-        "esbuild": "^0.14.27"
+        "esbuild": "^0.14.27",
+        "compression": ">=1",
+        "express": ">=3"
     }
 }
